styles.css
@font-face {
    font-family: main-header-font;
    src: url(fonts/CevicheOne-Regular.ttf);
}

@font-face {
    font-family: nav-font;
    src: url(fonts/Bungee-Regular.ttf);
}

@font-face {
    font-family: second-header-font;
    src: url(fonts/SedgwickAveDisplay-Regular.ttf);
}

@font-face {
    font-family: third-header-font;
    src: url(fonts/Alata-Regular.ttf);
}

@font-face {
    font-family: body-font;
    src: url(fonts/Raleway-VariableFont_wght.ttf);
}

.proposal {
    display: block;
    text-align: center;
    margin: 20px;
	width: 50%;
}

.page-content{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    min-height: 100vh;
    width: 100%;
    padding: 20px;
    box-sizing: border-box;
}

.body {
    min-height: 100vh;
    background-repeat: no-repeat;
    background-size: 300% 300%;
    animation: gradientShift 30s ease infinite;}

#index {
    background: linear-gradient(#0AE3E6 8%, #0BAC9B 27%,#0C7550 70%, #07422D 95%);
}

#conser-highlights {
    background: linear-gradient(#C2FBFF 0%, #23858C 81%);
}

#expansion{
    background: linear-gradient(#0082AE 36%, #1843C4 75%);
}

#origin{
    background:linear-gradient(#C2FBFF 0%, #23858C 81%);
}

#sources-resources{
    background:linear-gradient(#FFF4D0 20%, #0FABB5 68%);
}

.zine-images {
    border: 10px solid white;
}

.back-video{
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height:100%;
    object-fit: cover;
    z-index: -1;
    background-color: white;
}

.main-header-title{
    font-family: main-header-font;
    font-size: 56px;
    margin-bottom: 8px;
}

#main-title-1 {
    font-size: 140px;
    color: white;
    margin-top: 20px;
}

#main-title-2 {
    font-size: 95px;
    color: white;
    margin-top: 20px;

}

#main-title-3 {
    font-size: 57px;
    color: white;
    margin-top: 10px;
}

#main-title-4 {
    font-size: 100px;
    color: #110896;
    margin-top: 10px;
    margin-bottom: 5px;
}

#origin-blue{
    color: #110896;
}

#source-white{
    color: white;
}

.secondary-header-title{
    font-family: second-header-font;
    font-size: 38px;
}
#second-title-1 {
    font-size: 46px;
    color: white;
    margin: 10px 0px;
}

.third-header-text{
    font-family:third-header-font;
    margin-bottom: 35px;
}

.body-text{
    font-family: body-font;
}

#source-red{
    color: #FF0000;
}

#source-blue{
    color: #001ADD;
}

#source-light{
    color: #ffffff;
}

.nav-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 20px;
}


.nav-title{
    font-family: nav-font;
}

.nav-button{
    width: 180px;
    height: auto;
}

